force-app/main/default/objects/CventEvents__CventConnection__c/CventEvents__CventConnection__c.object-meta.xml
<CustomObject>
    <description>Stores the Cvent connections history.</description>
    <label>Cvent Connection</label>
    <nameField>
        <displayFormat>CC-{00000000}</displayFormat>
        <label>Cvent Connection Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cvent Connection</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>