force-app/main/default/objects/CventEvents__CventConnection__c/fields/CventEvents__AccessToken__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__AccessToken__c</fullName>
    <description>Stores the access token obtained during OAuth 2.0 flow.</description>
    <inlineHelpText>Stores the access token obtained during OAuth 2.0 flow.</inlineHelpText>
    <label>Access Token</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>