force-app/main/default/objects/CventEvents__CventConnection__c/fields/CventEvents__AccountName__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__AccountName__c</fullName>
    <description>Stores the name of Cvent account.</description>
    <inlineHelpText>Stores the name of Cvent account.</inlineHelpText>
    <label>Account Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>