force-app/main/default/objects/CventEvents__CventConnection__c/fields/CventEvents__AccountNumber__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__AccountNumber__c</fullName>
    <description>Stores the environment-level-unique Cvent account identifier.</description>
    <inlineHelpText>Stores the environment-level-unique Cvent account identifier.</inlineHelpText>
    <label>Account Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>