force-app/main/default/objects/CventEvents__CventConnection__c/fields/CventEvents__ConfigurationId__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__ConfigurationId__c</fullName>
    <description>Stores the unique identifier of the selected Cvent configuration.</description>
    <inlineHelpText>Stores the unique identifier of the selected Cvent configuration.</inlineHelpText>
    <label>Configuration Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>