force-app/main/default/objects/CventEvents__CventConnection__c/fields/CventEvents__ConnectedBy__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__ConnectedBy__c</fullName>
    <description>Stores the full name of the person who selected the Cvent configuration.</description>
    <inlineHelpText>Stores the full name of the person who selected the Cvent configuration.</inlineHelpText>
    <label>Connected By</label>
    <length>128</length>
    <type>Text</type>
</CustomField>