force-app/main/default/objects/CventEvents__CventConnection__c/fields/CventEvents__ConnectedDate__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__ConnectedDate__c</fullName>
    <description>Stores the date and time the Cvent configuration was selected.</description>
    <inlineHelpText>Stores the date and time the Cvent configuration was selected.</inlineHelpText>
    <label>Connected Date</label>
    <type>DateTime</type>
</CustomField>