force-app/main/default/objects/CventEvents__CventConnection__c/fields/CventEvents__EnvironmentName__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__EnvironmentName__c</fullName>
    <description>Stores the environment name which the target account belongs to.</description>
    <inlineHelpText>Stores the environment name which the target account belongs to.</inlineHelpText>
    <label>Environment Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>