force-app/main/default/objects/CventEvents__CventConnection__c/fields/CventEvents__IsActive__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Shows which connection is currently in use. There might be only one active connection in a time.</description>
    <inlineHelpText>Shows which connection is currently in use. There might be only one active connection in a time.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>