force-app/main/default/objects/CventEvents__CventConnection__c/fields/CventEvents__LicenseType__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__LicenseType__c</fullName>
    <description>Stores the license type of Cvent account.</description>
    <inlineHelpText>Stores the license type of Cvent account.</inlineHelpText>
    <label>License Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Data Connector</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>