force-app/main/default/objects/CventEvents__CventConnection__c/fields/CventEvents__RefreshToken__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__RefreshToken__c</fullName>
    <description>Stores the refresh token obtained during OAuth 2.0 flow.</description>
    <inlineHelpText>Stores the refresh token obtained during OAuth 2.0 flow.</inlineHelpText>
    <label>Refresh Token</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>