force-app/main/default/objects/CventEvents__CventConnection__c/listViews/CventEvents__All.listView-meta.xml
<ListView>
    <fullName>CventEvents__All</fullName>
    <columns>NAME</columns>
    <columns>CventEvents__IsActive__c</columns>
    <columns>CventEvents__AccountName__c</columns>
    <columns>CventEvents__EnvironmentName__c</columns>
    <columns>CventEvents__ConfigurationId__c</columns>
    <columns>CventEvents__ConnectedBy__c</columns>
    <columns>CventEvents__ConnectedDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>